force-app/main/default/objects/FleetxVehicleTracking__c/FleetxVehicleTracking__c.object-meta.xml
<CustomObject>
    <description>FleetX data import for vehicle tracking</description>
    <label>FleetxVehicleTracking</label>
    <nameField>
        <displayFormat>FL-{000000}</displayFormat>
        <label>FleetxVehicleTracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FleetxVehicleTrackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>