force-app/main/default/objects/FleetxVehicleTracking__c/fields/driverName__c.field-meta.xml
<CustomField>
    <fullName>driverName__c</fullName>
    <label>driverName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>