force-app/main/default/objects/FleetxVehicleTracking__c/fields/eAddress__c.field-meta.xml
<CustomField>
    <fullName>eAddress__c</fullName>
    <label>eAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>