force-app/main/default/objects/FleetxVehicleTracking__c/fields/eDate__c.field-meta.xml
<CustomField>
    <fullName>eDate__c</fullName>
    <label>eDate</label>
    <type>DateTime</type>
</CustomField>