force-app/main/default/objects/FleetxVehicleTracking__c/fields/eLat__c.field-meta.xml
<CustomField>
    <fullName>eLat__c</fullName>
    <label>eLat</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>