force-app/main/default/objects/FleetxVehicleTracking__c/fields/eLon__c.field-meta.xml
<CustomField>
    <fullName>eLon__c</fullName>
    <label>eLon</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>