force-app/main/default/objects/FleetxVehicleTracking__c/fields/groupName__c.field-meta.xml
<CustomField>
    <fullName>groupName__c</fullName>
    <label>groupName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>