force-app/main/default/objects/FleetxVehicleTracking__c/fields/sAddress__c.field-meta.xml
<CustomField>
    <fullName>sAddress__c</fullName>
    <description>Start address</description>
    <label>sAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>