force-app/main/default/objects/FleetxVehicleTracking__c/fields/sDate__c.field-meta.xml
<CustomField>
    <fullName>sDate__c</fullName>
    <label>sDate</label>
    <type>DateTime</type>
</CustomField>