force-app/main/default/objects/FleetxVehicleTracking__c/fields/sLat__c.field-meta.xml
<CustomField>
    <fullName>sLat__c</fullName>
    <label>sLat</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>