force-app/main/default/objects/FleetxVehicleTracking__c/fields/sLon__c.field-meta.xml
<CustomField>
    <fullName>sLon__c</fullName>
    <label>sLon</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>