force-app/main/default/objects/FleetxVehicleTracking__c/fields/tripId__c.field-meta.xml
<CustomField>
    <fullName>tripId__c</fullName>
    <label>tripId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>