force-app/main/default/objects/FleetxVehicleTracking__c/fields/vehicleName__c.field-meta.xml
<CustomField>
    <fullName>vehicleName__c</fullName>
    <label>vehicleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>