force-app/main/default/objects/FleetxVehicleTracking__c/fields/vehicleNumber__c.field-meta.xml
<CustomField>
    <fullName>vehicleNumber__c</fullName>
    <label>vehicleNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>