force-app/main/default/objects/FleetxVehicleTracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>vehicleNumber__c</columns>
    <columns>vehicleName__c</columns>
    <columns>driverName__c</columns>
    <columns>tripId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>